set h1 text alignment to center set paragraph with 2em indentation

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,9 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+p {
+	text-indent: 2em;
+}
+
+h1 {
+	text-align: center;
+}
